# InfinityLearn

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/: pull_request_template.md
Core/: CMakeLists.txt  Logging.cpp  Logging.h  LoggingTest.cpp
cmake/: HotReload.cmake
docs/: design_principles.md  roadmap.md
